update: 去除字符串模板